--- a/mono-basic/package.yml
+++ b/mono-basic/package.yml
@@ -8,7 +8,7 @@ license     :
     - MIT
 summary     : Mono Basic Runtime and Compiler
 description : |
-  Mono Basic is an open source implementation of Microsoft's Visual Basic Programming language and runtime tha runs atop the (Mono) .NET Framework
+  Mono Basic is an open source implementation of Microsoft's Visual Basic Programming language and runtime that runs atop the (Mono) .NET Framework
 builddeps:
   - mono-devel
 rundeps:
