add component entry to packages. Update awesome with defaults patch. Add ldoc

--- a/lua-lgi/package.yml
+++ b/lua-lgi/package.yml
@@ -11,7 +11,7 @@ description : |
 builddeps:
   - lua-devel
   - gobject-introspection-devel
-rundepgs:
+rundeps:
   - lua
 build       : |
     %make
