--- a/luajit-lgi/package.yml
+++ b/luajit-lgi/package.yml
@@ -6,6 +6,7 @@ source      :
 license     :
     - MIT
 summary     : Dynamic Lua binding to GObject libraries using GObject-Introspection
+component   : programming.library
 description : |
   LGI is gobject-introspection based dynamic Lua binding to GObject based libraries. It allows using GObject-based libraries directly from Lua.
 builddeps:
